Implement DepartmentSection service and controller with enhanced response handling